Mon May 23 08:35:24 2011  Eric Hodel  <drbrain@segment7.net>

	* hash.c:  Improve documentation of Hash#key.  Patch by Utkarsh
	  Kukreti.  [Ruby 1.9 - Bug #4760]

Mon May 23 08:32:59 2011  Eric Hodel  <drbrain@segment7.net>

	* enumerator.c:  Improve documentation.  Patch by Dave Copeland.
	  [Ruby 1.9 - Bug #4757]

Mon May 23 07:19:45 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* NEWS (openssl): Infinite length support. Different behavior of
	Constructive and Primitive constructors.

Mon May 23 06:58:33 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* ext/openssl/ossl_asn1.c: Forbid Constructives whose value is not an
	Array to prevent segfault. Added test.

Mon May 23 06:33:17 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* ext/openssl/ossl_asn1.c: Forbid Constructive without infinite
	length. This also prevents a segfault. Added test and improved
	documentation.

Mon May 23 05:58:14 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* ext/openssl/ossl_asn1.c: Fix decoding of infinite length values.
	Simplified ossl_asn1_decode0 by splitting it into three separate
	functions. Add tests.
	[Ruby 1.9 - Bug #4374][ruby-core:35123]

Mon May 23 04:03:46 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* ext/openssl/ossl_asn1.c (ossl_asn1_initialize): Allow creation of
	Constructives with an explicit tag_class parameter without
	automatically setting tagging to :EXPLICIT. Fixes a bug when encoding
	infinite length primitive values.

Mon May 23 04:03:46 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* ext/openssl/ossl_asn1.c (ossl_asn1_cons_to_der): Add an additional
	EOC for infinite length Constructives that are supposed to be encoded
	with explicit tagging. Also tabify method correctly.

Mon May 23 03:44:39 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* ext/openssl/ossl_asn1.c (ossl_asn1data_to_der): Remove redundant
	flag tmp_cons.

Mon May 23 00:35:00 2001  Kenta Murata  <mrkn@mrkn.jp>
